[gd_scene load_steps=5 format=3 uid="uid://b1xny1d2hiwqq"]

[ext_resource type="Script" uid="uid://cu00wmfnopmph" path="res://Scenes/Systems/Character/Test/NewCharView.gd" id="1_0ya3u"]
[ext_resource type="Script" uid="uid://db0elg8s3grl3" path="res://Scenes/Systems/Character/Test/NewCharController.gd" id="2_yse5f"]
[ext_resource type="Script" uid="uid://bpsn5udvcu2s1" path="res://Scenes/Systems/Character/Test/NewCharEvents.gd" id="3_yse5f"]
[ext_resource type="Script" uid="uid://bswcjcf18w3y5" path="res://Scenes/Systems/Character/Test/NewCharLoader.gd" id="5_y671j"]

[node name="NewCharSceneTest" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NewCharPanel" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 187.0
offset_right = 1796.0
offset_bottom = 1075.0

[node name="CharacteristicsLabel" type="Label" parent="CanvasLayer/NewCharPanel"]
layout_mode = 0
offset_left = 61.0
offset_top = 30.0
offset_right = 276.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 30
text = "Characteristics"

[node name="CharacteristicsVBox" type="VBoxContainer" parent="CanvasLayer/NewCharPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.061000004
anchor_right = 0.24200001
anchor_bottom = 1.0
offset_top = 0.42499542
offset_right = -0.37802124
offset_bottom = 12.0

[node name="SkillsLabel" type="Label" parent="CanvasLayer/NewCharPanel"]
layout_mode = 0
offset_left = 518.0
offset_top = 24.0
offset_right = 733.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 30
text = "Skills
"

[node name="SkillsVBox" type="VBoxContainer" parent="CanvasLayer/NewCharPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252
anchor_top = 0.066
anchor_right = 0.49300003
anchor_bottom = 1.0
offset_left = -0.46801758
offset_top = 0.05000305
offset_right = 0.76293945
offset_bottom = 2.0

[node name="BackToOptionsBtn" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 65.0
offset_right = 139.0
offset_bottom = 96.0
text = "Back to Options"

[node name="MVCE" type="Node" parent="."]

[node name="NewCharView" type="Node" parent="MVCE"]
unique_name_in_owner = true
script = ExtResource("1_0ya3u")

[node name="NewCharController" type="Node" parent="MVCE"]
unique_name_in_owner = true
script = ExtResource("2_yse5f")

[node name="NewCharEvents" type="Node" parent="MVCE"]
unique_name_in_owner = true
script = ExtResource("3_yse5f")

[node name="NewCharLoader" type="Node" parent="MVCE"]
unique_name_in_owner = true
script = ExtResource("5_y671j")
